--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
     --color-primary:red;
     --color-primary:rgb(244, 88, 88);
     --color-secondary:blue;
-    --color-third:black;
+    --color-third:rgb(10, 203, 84);
 
 }
 
@@ -41,6 +41,12 @@ section{
     background-color: var(--color-third);
 }
 
+.img-reboot{
+    width: 100%;
+    display: block;
+}
+
+
 /* --------MEDIA QUERY----------- */
 
 /* tablet md*/
@@ -60,7 +66,18 @@ section{
 
 /* desktop lg */
 @media screen and (min-width:768px) {
-    
+    .col-lg-1-2{
+        width: 50%;
+    }
+    .col-lg-1-3{
+        width: calc(100% / 3);
+    }
+    .col-lg-1-4{
+        width: 25%;
+    }
+    .col-lg-3-4{
+        width: 75%;
+    }
 }
 
 
