--- a/css/style.css
+++ b/css/style.css
@@ -84,6 +84,10 @@ section{
     background-color: var(--forth-color);
 }
 
+.bg-third{
+    background-color: var(--color-third);
+}
+
 
 
 /* --------MEDIA QUERY----------- */
