--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@ nav{
 }
 
 section{
-    padding: 1rem 0;
+    padding: 4rem 0;
 }
 
 .container{
@@ -51,10 +51,20 @@ section{
 }
 .nav-button a{
     text-decoration: none;
+    padding: .5rem .7rem;
+    color: white;
+    
 }
 
 #Hamburger-button{
     font-size: 2rem;
+}
+
+.btn{
+    background-color: white;
+    border: unset;
+    padding: .3rem;
+    border-radius: 20px;
 }
 
 /* ----------UTILITIES-------- */
@@ -80,12 +90,22 @@ section{
     padding: .5rem;
 }
 
+
+
 .bg-white{
     background-color: var(--forth-color);
 }
 
 .bg-third{
     background-color: var(--color-third);
+}
+
+.hg-100{
+    height: 100%;
+}
+
+.ai-center{
+    align-items: center;
 }
 
 
