--- a/css/style.css
+++ b/css/style.css
@@ -135,6 +135,11 @@ section{
     padding-bottom: 1rem;
 }
 
+.pd-b-5{
+    padding-bottom: 5rem;
+}
+
+
 .pd-r-1-3{
     padding-right: .3rem;
 }
@@ -164,6 +169,9 @@ section{
 .txt-white{
     color: white;
 }
+.radius{
+    border-radius: 20px;
+}
 
 
 
@@ -190,6 +198,14 @@ section{
 
     .row-md{
         display: flex; 
+    }
+    .card-relative-bt{
+        position: relative;
+        bottom: -3rem;
+    }
+    .card-relative-tp{
+        position: relative;
+        top: -3rem;
     }
 }
     
