--- a/css/style.css
+++ b/css/style.css
@@ -199,14 +199,7 @@ section{
     .row-md{
         display: flex; 
     }
-    .card-relative-bt{
-        position: relative;
-        bottom: -3rem;
-    }
-    .card-relative-tp{
-        position: relative;
-        top: -3rem;
-    }
+   
 }
     
     
@@ -241,6 +234,18 @@ section{
 
     .row-lg{
         display: flex; 
+    }
+    .card-relative-bt{
+        position: relative;
+        bottom: -3rem;
+    }
+    .card-relative-tp{
+        position: relative;
+        top: -3rem;
+    }
+
+    #img-jumbo{
+        bottom: -1.5rem;
     }
 }
 
