--- a/css/style.css
+++ b/css/style.css
@@ -89,16 +89,22 @@ section{
 }
 
 .sub-title-card{
-    font-size: 1.2rem;
+    font-size: 1.4rem;
     font-weight: bolder;
     font-family: system-ui;
-    
+}
+.img-circle{
+    width: 80px;
+    aspect-ratio: 1 / 1;
+    border-radius: 50%;
+    object-fit: cover;
 }
 
 /* ----------UTILITIES-------- */
 .img-reboot{
     width: 100%;
     display: block;
+    
     
 }
 
@@ -108,6 +114,15 @@ section{
 
 .ft-size-50{
     font-size: 50px;
+}
+.ft-bold{
+    font-weight: bold;
+}
+.ft-size-2{
+    font-size: 2rem;
+}
+.ft-size-1_1{
+    font-size: 1.1rem;
 
 }
 
@@ -134,9 +149,30 @@ section{
 .pd-b-1{
     padding-bottom: 1rem;
 }
+.pd-b-2{
+    padding-bottom: 2rem;
+}
 
 .pd-b-5{
     padding-bottom: 5rem;
+}
+.pd-b-1-2{
+    padding-bottom: .5rem;
+}
+.mg-b-1{
+    margin-bottom: 1rem;
+}
+.p-t-b-1{
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+}
+.pd-l-r-1-2{
+    padding-left: .5rem;
+    padding-right: .5rem;
+}
+.pd-l-r-1{
+    padding-left: 1rem;
+    padding-right: 1rem;
 }
 
 
@@ -161,9 +197,18 @@ section{
 .ai-center{
     align-items: center;
 }
+.jc-center{
+    justify-content: center;
+}
+.jc-start{
+    justify-content: flex-start;
+}
 
 .txt-primary{
     color: var(--color-primary);
+}
+.txt-secondary{
+    color: var(--color-secondary);
 }
 
 .txt-white{
@@ -173,6 +218,9 @@ section{
     border-radius: 20px;
 }
 
+.scale-0-9{
+    scale: .9;
+}
 
 
 /* --------MEDIA QUERY----------- */
