--- a/css/style.css
+++ b/css/style.css
@@ -98,19 +98,18 @@ section{
     font-weight: bolder;
     font-family: system-ui;
 }
-.img-circle{
-    width: 80px;
-    aspect-ratio: 1 / 1;
-    border-radius: 50%;
-    object-fit: cover;
-}
+
 
 /* ----------UTILITIES-------- */
 .img-reboot{
     width: 100%;
     display: block;
-    
-    
+}
+.img-circle{
+    width: 160px;
+    aspect-ratio: 1 / 1;
+    border-radius: 50%;
+    object-fit: cover;
 }
 
 .txt-center{
@@ -128,9 +127,10 @@ section{
 }
 .ft-size-1_1{
     font-size: 1.1rem;
-
 }
-
+.ft-size-0_7{
+    font-size: 0.7rem;
+}
 
 .space-between{
     justify-content: space-between;
@@ -183,6 +183,9 @@ section{
 
 .pd-r-1-3{
     padding-right: .3rem;
+}
+.mg-auto{
+    margin: auto;
 }
 
 
@@ -300,6 +303,7 @@ section{
     #img-jumbo{
         bottom: -1.5rem;
     }
+
 }
 
 
