--- a/css/style.css
+++ b/css/style.css
@@ -82,6 +82,9 @@ section{
 .btn-small{
     padding: .3rem;
 }
+.btn-large{
+    padding: 1rem 2.5rem;
+}
 
 .btn-blu{
     background-color: var(--color-primary);
@@ -221,6 +224,12 @@ section{
 
 .txt-white{
     color: white;
+}
+.txt-gray{
+    color: rgb(192, 192, 192);
+}
+.txt-yellow{
+    color: rgb(251, 251, 0);
 }
 .radius{
     border-radius: 20px;
