--- a/css/style.css
+++ b/css/style.css
@@ -101,6 +101,11 @@ section{
     font-weight: bolder;
     font-family: system-ui;
 }
+.box_circle{
+    border-radius: 50%;
+    width: 2rem;
+    aspect-ratio: 1 / 1;
+}
 
 
 /* ----------UTILITIES-------- */
